# ssl_cifar

./: .gitignore  README.md  pyproject.toml
configs/: base_simsiam_linear.yaml  base_simsiam_pretrain.yaml
examples/: linear_eval.py  pretrain.py
src/ssl_cifar/: __init__.py  config.py
src/ssl_cifar/data/transformations/: shared.py  simsiam.py
src/ssl_cifar/models/: knn.py  simsiam.py
src/ssl_cifar/models/backbone/: __init__.py
src/ssl_cifar/models/ssl_models/: __init__.py
src/ssl_cifar/trainer/: train_n_val.py
ssl_cifar/: config.py
ssl_cifar/data/transformations/: __init__.py  shared.py  simsiam.py
ssl_cifar/models/backbone/: __init__.py  mb_net.py  resnet.py
ssl_cifar/models/ssl_models/: __init__.py  barlow_twins.py  simsiam.py
ssl_cifar/trainer/: scheduler.py  train_n_val.py
tests/: test_omegaconf.py
tests/models/: test_resnet.py
