[project]
name = "ssl-cifar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Jeff Wiroj", email = "pasawee2@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "jupyter-black>=0.4.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "wandb>=0.20.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.ruff]
line-length = 99 # Default is 88, same as Black

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
