[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel] 
packages = ["ssl_cifar"]

[project]
name = "ssl-cifar"
version = "0.1.0"
description = "Self-Supervised Learning package for cifar10"
readme = "README.md"
authors = [{ name = "Jeff Wiroj", email = "pasawee2@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "jupyter-black>=0.4.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "omegaconf>=2.3.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "timm>=1.0.16",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "wandb>=0.20.1",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.3",
    "pytest>=8.4.1",
    "ruff>=0.11.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
